--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="mt-10 flex justify-between">
                   <button class="bg-sky-500 py-2 px-6  rounded-md font-semibold hover:bg-sky-600 cursor-pointer duration-100" id="btnStart" onclick="start()">Start</button>
                   <button class="bg-sky-500 py-2 px-6  rounded-md font-semibold  hover:bg-sky-600 cursor-pointer duration-100" id="btnStop" onclick="stop()">Stop</button>
-                  <button class="bg-sky-500 py-2 px-6 rounded-md font-semibold  hover:bg-sky-600 cursor-pointer duration-100">Reset</button>
+                  <button class="bg-sky-500 py-2 px-6 rounded-md font-semibold  hover:bg-sky-600 cursor-pointer duration-100" onclick="reset()">Reset</button>
                 </div>
 
             </div>
